--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
     --main-padding: 15px;
     --border-color: white;
     --background-color: black;
+    --output-height: 75%;
 }
 
 html {
@@ -17,30 +18,56 @@ body {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+
+    font-family: 'Source Sans Pro', sans-serif;
+    color: white;
 }
 
 #calc-body {
-    /*background-color: #f1f1e9;*/
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+
     padding: var(--main-padding);
     border: 1px solid var(--border-color);
 
-    font-family: 'Source Sans Pro', sans-serif;
-
     background-color: var(--background-color);
+    color: white;
 }
 
 #result-area {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+}
 
+#equation {
+    height: calc(100% - var(--output-height));
+    width: 100%;
+
+    font-size: 24px;
+    letter-spacing: 0.03em;
+    text-align: right;
+    background-color: red;
+}
+
+#output {
+    /*height: var(--output-height);*/
+    height: 20%;
+    width: 100%;
+
+    font-size: 56px;
+    letter-spacing: 0.03em;
+    text-align: right;
 }
 
 #button-grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 15px 15px;
-
 }
 
-.button {
+.button-item {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -51,13 +78,18 @@ body {
     font-size: 34px;
     color: white;
 
-    transition: background-color 0.2s;
+    transition: background-color 0.25s;
 }
 
 .button:hover {
     background-color: #808080;
     cursor: pointer;
 
+}
+
+.whiten {
+    background-color: #f5f5f5 !important;
+    color: black;
 }
 
 @media only screen and (max-width: 600px) {
@@ -68,7 +100,7 @@ body {
     }
 
     #result-area {
-        height: 35%;
+        height: calc(35% - var(--main-padding) - 10px);
         width: 100%;
     }
 
