--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,8 @@ body {
 
     background-color: #dddddd;
     color: black;
+
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 #result-area {
